@@ -85,7 +85,7 @@ snoop_join(struct modeNode *mNode, UNUSED_ARG(void *extra)) {
 }
 
 static void
-snoop_part(struct modeNode *mn, const char *reason) {
+snoop_part(struct modeNode *mn, const char *reason, UNUSED_ARG(void *extra)) {
     if (!snoop_cfg.enabled) return;
     if (mn->user->dead) return;
     UPDATE_TIMESTAMP();
@@ -316,7 +316,7 @@ snoop_init(void) {
     conf_register_reload(snoop_conf_read);
     reg_nick_change_func(snoop_nick_change, NULL);
     reg_join_func(snoop_join, NULL);
-    reg_part_func(snoop_part);
+    reg_part_func(snoop_part, NULL);
     reg_kick_func(snoop_kick);
     reg_new_user_func(snoop_new_user, NULL);
     reg_del_user_func(snoop_del_user, NULL);
